--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- Main Menu -->
     <!-- ######### -->
     <string name="app_name">Nordija Statistics</string>
-    <string name="action_settings">Settings</string>
+    <string name="settings_title">Settings</string>
     <string-array name="menu_items">
         <item>Charts</item>
         <item>Settings</item>
