1. Excluding 'Programs' from menu because of incorrect results returned by the rest service. 2. Minor bugfix when returning chart colors

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,7 +13,7 @@
         <item>Channels</item>
         <item>DVR Recordings</item>
         <item>Movies</item>
-        <item>Programs</item>
+<!--         <item>Programs</item> -->
         <item>Selfcare Sub.</item>
         <item>Shop Views</item>
         <item>Start Overs</item>
